--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "soap": "^1.1.11"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/mssql": "^9.1.7",
     "@types/node": "^22.14.1",
+    "@types/soap": "^0.18.0",
     "prisma": "^6.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
