--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.1.1",
     "@material-tailwind/react": "1.0.3",
-    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.3",
@@ -31,12 +32,14 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.61.1",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
