feat: add update functionality for route requests and integrate alert dialog component

--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -3,10 +3,11 @@ version: '3.8'
 services:
   db-dev:
     image: postgres:15
-    container_name: dev-postgres
+    container_name: dev-postgres-new
+
     restart: always
     ports:
-      - "5433:5433"  # <--- Porta 5433 local para não conflitar com a produção
+      - "5433:5432"  # <--- Porta 5433 local para não conflitar com a produção
     environment:
       POSTGRES_USER: dev
       POSTGRES_PASSWORD: dev
