--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js", 
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "cross-env DATABASE_URL=postgresql://dev:dev@localhost:5433/workapool_dev ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "cross-env DATABASE_URL=postgresql://admin:admin@localhost:5432/workapool ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
-  },
+    "build": "tsc",
+    "db:dev": "cross-env DATABASE_URL=postgresql://dev:dev@localhost:5433/workapool_dev prisma studio",
+    "db:prod": "cross-env DATABASE_URL=postgresql://admin:admin@localhost:5432/workapool prisma studio",
+    "db:migrate:dev": "cross-env DATABASE_URL=postgresql://dev:dev@localhost:5433/workapool_dev prisma migrate dev",
+    "db:migrate:prod": "cross-env DATABASE_URL=postgresql://admin:admin@localhost:5432/workapool prisma migrate deploy"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -34,6 +39,7 @@
     "@types/mssql": "^9.1.7",
     "@types/node": "^22.16.4",
     "@types/soap": "^0.18.0",
+    "cross-env": "^10.0.0",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.3",
