--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env DATABASE_URL=postgresql://dev:dev@localhost:5433/workapool_dev ts-node-dev --respawn --transpile-only src/server.ts",
-    "start": "cross-env DATABASE_URL=postgresql://admin:admin@localhost:5432/workapool ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "db:dev": "cross-env DATABASE_URL=postgresql://dev:dev@localhost:5433/workapool_dev prisma studio",
-    "db:prod": "cross-env DATABASE_URL=postgresql://admin:admin@localhost:5432/workapool prisma studio",
-    "db:migrate:dev": "cross-env DATABASE_URL=postgresql://dev:dev@localhost:5433/workapool_dev prisma migrate dev",
-    "db:migrate:prod": "cross-env DATABASE_URL=postgresql://admin:admin@localhost:5432/workapool prisma migrate deploy"
-},
+    "start": "cross-env NODE_ENV=production node dist/server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "dotenv-flow": "^4.1.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
