--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite --mode development --port 5858",
+    "prod": "vite --mode production --port 5173", 
+    "build": "tsc && vite build",
+    "preview": "vite preview --port 5173"
   },
+
+
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@heroicons/react": "^2.2.0",
