--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite --mode development --port 5858",
-    "prod": "vite --mode production --port 5173", 
+    "prod": "vite --mode production --port 5173",
     "build": "tsc && vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview --port 5173",
+    "prod:build": "npm run build",
+    "prod:serve": "npm run preview"
   },
-
-
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@heroicons/react": "^2.2.0",
