--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js", 
+  "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -34,6 +34,7 @@
     "@types/mssql": "^9.1.7",
     "@types/node": "^22.16.4",
     "@types/soap": "^0.18.0",
+    "dotenv-cli": "^10.0.0",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.3",
