feat: update environment configuration and enhance API base URL handling with axios

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,21 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "start:dev": "cross-env NODE_ENV=development node dist/server.js",
+    "prisma:generate": "dotenv -e .env.development -- prisma generate",
+    "prisma:migrate": "dotenv -e .env.development -- prisma migrate deploy",
+    "prisma:reset": "dotenv -e .env.development -- prisma migrate reset",
+    "prisma:studio": "dotenv -e .env.development -- prisma studio",
+    "prisma:prod": "dotenv -e .env.production -- prisma migrate deploy",
+    "db:setup": "npm run prisma:generate && npm run prisma:migrate",
+    "db:setup:prod": "npm run prisma:generate && npm run prisma:prod",
+    "deploy": "npm run build && npm run db:setup:prod && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +44,7 @@
     "@types/mssql": "^9.1.7",
     "@types/node": "^22.16.4",
     "@types/soap": "^0.18.0",
+    "cross-env": "^7.0.3",
     "dotenv-cli": "^10.0.0",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
