--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,6 @@
-VITE_API_URL=http://192.168.0.32:3001
+# API Configuration
+VITE_API_BASE_URL=http://192.168.0.32:3005
+VITE_API_TIMEOUT=10000
+
+# Environment
+VITE_NODE_ENV=production
