--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start": "cross-env NODE_ENV=production node dist/server.js",
     "start:dev": "cross-env NODE_ENV=development node dist/server.js",
     "prisma:generate": "dotenv -e .env.development -- prisma generate",
-    "prisma:migrate": "dotenv -e .env.development -- prisma migrate deploy",
+    "prisma:migrate": "dotenv -e .env.development -- prisma migrate dev",
     "prisma:reset": "dotenv -e .env.development -- prisma migrate reset",
     "prisma:studio": "dotenv -e .env.development -- prisma studio",
     "prisma:prod": "dotenv -e .env.production -- prisma migrate deploy",
